# ILCS

./: .gitignore  README.md  pyproject.toml
chrome-extension/: manifest.json
chrome-extension/src/background/: background.js
chrome-extension/src/content/: content.js
chrome-extension/src/options/: options.html  options.js
chrome-extension/src/popup/: popup.html  popup.js
chrome-extension/styles/: popup.css
chrome-extension/test-results/: functional-test-results.md
chrome-extension/tests/: test-plan.md
docs/: technical_design.md
ilcs-api/: .env  pyproject.toml
ilcs-api/app/: config.py  main.py  models.py
ilcs-api/app/services/: openai_service.py
ilcs-web/: .env  .env.production  index.html  package-lock.json  package.json  vite.config.ts
ilcs-web/prisma/: schema.prisma
ilcs-web/src/: App.tsx
ilcs-web/src/app/: page.tsx
ilcs-web/src/app/api/topics/: route.ts
ilcs-web/src/components/articles/: ArticleDisplay.tsx  InsightInput.tsx
ilcs-web/src/components/topics/: KeywordInput.tsx  TopicMap.tsx
ilcs-web/src/components/ui/: chart.tsx  loading.tsx
ilcs-web/src/lib/: api.ts
ilcs-web/src/mocks/: topicData.ts
src/ilcs/: config.py
src/ilcs/analysis/: sentiment.py
src/ilcs/news/: scraper.py
src/ilcs/trading/: signals.py
tests/: test_news_scraper.py
