[tool.poetry]
name = "ilcs"
version = "0.1.0"
description = "Intelligent Large-scale Composite System for NASDAQ-100 Event-driven Trading"
authors = ["Devin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.3"
numpy = "^2.2.0"
python-dotenv = "^1.0.1"
openai = "^1.57.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
